WIP: migrate to new FileGenerator interface
// FIXME: move binding to java-api-generator (because we can)

JIRA: MDSAL-232
Change-Id: I04931ff6f70f548de5a49042201283c7e503f92e
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>